Adjust font family and sizes for better readability

--- a/locales/en/translation.json
+++ b/locales/en/translation.json
@@ -74,7 +74,7 @@
   "chooseBasket": "Choose the basket you want to pay for",
   "chooseInvoice": "Choose the invoice you want to pay",
   "marocTelecom": "Maroc Telecom",
-  "createWalletSubtitle": "Securely Manage Your Finances with ORA's Easy Wallet Creation Process",
+  "createWalletSubtitle": "Securely Manage Your Finances with ORA's Wallet",
   "createWallet": "Create Wallet",
   "payBasket": "Pay Basket",
   "payOngoingBasket": "Pay Ongoing Basket",
