--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -72,7 +72,7 @@
   "chooseBasket": "Choisissez le panier que vous désirez payer",
   "chooseInvoice": "Choisissez la facture que vous désirez payer",
   "marocTelecom": "Maroc Telecom",
-  "createWalletSubtitle": "Gérez en toute sécurité vos finances avec le processus de création de portefeuille facile d'ORA",
+  "createWalletSubtitle": "Gérez en toute sécurité vos finances ORA Wallet",
   "createWallet": "Créer un portefeuille",
   "payBasket": "Payez un panier",
   "payOngoingBasket": "Payez un panier en cours",
