--- a/locales/fr/translation.json
+++ b/locales/fr/translation.json
@@ -104,5 +104,14 @@
   "firstName": "Prénom",
   "lastName": "Nom",
   "walletPin": "Code PIN du portefeuille",
+  "enterRecipientDetails": "Entrez les détails du destinataire",
+  "recipientName": "Nom du destinataire",
+  "enterRecipientName": "Entrez le nom du destinataire",
+  "recipientPhone": "Téléphone du destinataire",
+  "enterRecipientPhone": "Entrez le téléphone du destinataire",
+  "recipientAddress": "Adresse du destinataire",
+  "enterRecipientAddress": "Entrez l'adresse du destinataire",
+  "recipientAccountNumber": "Numéro de compte du destinataire",
+  "enterRecipientAccountNumber": "Entrez le numéro de compte du destinataire",
   "loremText": "Lorem ipsum dolor sit amet, consectetur adipiscing elit."
 }
